--- a/vasco/pom.xml
+++ b/vasco/pom.xml
@@ -14,6 +14,20 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>raft</groupId>
+    	<artifactId>raft</artifactId>
+    	<version>0.3</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/lib/jgroups-raft-0.3.jar</systemPath>
+    </dependency>
+    <dependency>
+    	<groupId>h2</groupId>
+    	<artifactId>h2</artifactId>
+    	<scope>system</scope>
+    	<version>1.3.176</version>
+    	<systemPath>${project.basedir}/lib/h2-1.3.176.jar</systemPath>
+    </dependency>
   </dependencies>
   <build>
   <plugins>
