--- a/vasco/pom.xml
+++ b/vasco/pom.xml
@@ -67,8 +67,8 @@
     	<groupId>netty</groupId>
     	<artifactId>netty</artifactId>
     	<scope>system</scope>
-    	<version>3.2.1</version>
-    	<systemPath>${project.basedir}/lib/netty-3.2.1.Final.jar</systemPath>
+    	<version>3.3.1</version>
+    	<systemPath>${project.basedir}/lib/netty-3.3.1.Final.jar</systemPath>
     </dependency>
     <dependency>
     	<groupId>equinoxcommon</groupId>
@@ -122,6 +122,47 @@
       </excludes>
     </configuration>
   </plugin>
+  
+  <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-jar-plugin</artifactId>
+	<configuration>
+		<archive>
+			<manifest>
+				<mainClass>org.mpi.vasco.txstore.coordinator.NewCoordinator</mainClass>
+				<addClasspath>true</addClasspath>
+			</manifest>
+		</archive>
+				<archive>
+			<manifest>
+				<mainClass>org.mpi.vasco.txstore.appextend.MicroStorage</mainClass>
+				<addClasspath>true</addClasspath>
+			</manifest>
+		</archive>
+	</configuration>
+  </plugin>
+	<plugin>
+		<groupId>org.dstovall</groupId>
+		<artifactId>onejar-maven-plugin</artifactId>
+		<version>1.4.4</version>
+		<executions>
+			<execution>
+				<configuration>
+					<classifier>onejar</classifier>
+				</configuration>
+				<goals>
+					<goal>one-jar</goal>
+				</goals>
+			</execution>
+		</executions>
+	</plugin>
 </plugins>
 </build>
+
+<pluginRepositories>
+        <pluginRepository>
+    <id>onejar-maven-plugin.googlecode.com</id>
+    <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo-snapshot</url>
+</pluginRepository>
+    </pluginRepositories>
 </project>
