fixed a legacy problem of serializing conflicting operations

--- a/vasco/pom.xml
+++ b/vasco/pom.xml
@@ -139,6 +139,12 @@
 				<addClasspath>true</addClasspath>
 			</manifest>
 		</archive>
+		<archive>
+			<manifest>
+				<mainClass>org.mpi.vasco.coordination.protocols.centr.MessageHandlerServerSide</mainClass>
+				<addClasspath>true</addClasspath>
+			</manifest>
+		</archive>
 	</configuration>
   </plugin>
 	<plugin>
